Bug 337557 - "Cannot open file" error when entering absolute path in file dialog
Summary: "Cannot open file" error when entering absolute path in file dialog
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.0.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-18 04:00 UTC by Loïc Yhuel
Modified: 2014-09-06 23:45 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Loïc Yhuel 2014-07-18 04:00:33 UTC
In a file dialog, when entering an absolute path in "Name" field and pressing enter (either a directory to navigate to, or a file to open), I get a "Cannot open file" dialog, with an error like "The file "/home/" could not be found".
It works with an absolute path url, like "file:///home".

Seen with both KFileDialog (for example kfontview) and KDEPlatformFileDialog (for example qtcreator).

Note that :
 - It worked on KDE4
 - The default Qt5.3 file dialog (ie when not using KDEPlatformTheme), has the opposite behavior (/home works, file:///home doesn't work).
Comment 1 Maarten De Meyer 2014-09-06 13:44:28 UTC
Git commit a77076ad8799174637cf452e5bb3e4097b34916e by Maarten De Meyer.
Committed on 05/09/2014 at 18:05.
Pushed by demeyer into branch 'master'.

Fix QUrl porting error.
REVIEW: 120071

M  +1    -1    src/filewidgets/kfilewidget.cpp

http://commits.kde.org/kio/a77076ad8799174637cf452e5bb3e4097b34916e