Fix QUrl porting error.

BUG: 337557
REVIEW: 120071